--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <input type="number" id="ratePerKg" required>
 
       <label for="cdPercentage">CD Percentage (%):</label>
-      <input type="number" id="cdPercentage" required>
-
+      <input type="number" id="cdPercentage" value="2" required>
       <button type="button" id="calculateBtn">Calculate</button>
     </form>
     <div id="output">
