--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Sona Mukhi Bill Calculator</h1>
+   <h1>HR ENTERPRISIES</h1>
+   <h1>Sona Mukhi Bill Calculator</h1>
+   <hr>
     <form id="billForm">
       <label for="initialWeight">Initial Weight (kg):</label>
       <input type="number" id="initialWeight" required>
