--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>Sona Mukhi Bill Calculator</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+  
 </head>
 <body>
   <div class="container">
-   <h1>HR ENTERPRISIES</h1>
-   <h1>Sona Mukhi Bill Calculator</h1>
+   <h1 style="color:rgb(31, 17, 70);">HR ENTERPRISIES</h1>
+   <h1 style="color: rgb(25, 24, 63) ">Sona Mukhi Bill Calculator</h1>
    <hr>
     <form id="billForm">
       <label for="initialWeight">Initial Weight (kg):</label>
